# monedero-mesh

./: .gitignore  Cargo.toml
.github/workflows/: check.yml  safety.yml  scheduled.yml  test.yml
cipher/: Cargo.toml
cipher/src/: cipher.rs  error.rs  lib.rs  payload.rs  session.rs
cli/: Cargo.toml
cli/src/: cli.rs  cmd.rs  config.rs  context.rs  log.rs  main.rs
cli/src/cmd/: stake.rs  tokens.rs  transfer.rs
domain/: Cargo.toml
domain/src/: lib.rs  pairing_uri.rs
examples/dapp-demo/: Cargo.toml
examples/dapp-demo/src/: log.rs  main.rs
examples/web-demo/: Cargo.toml  index.html
examples/web-demo/src/: lib.rs  log.rs  test.rs
extension/: Cargo.toml
namespaces/: Cargo.toml
namespaces/src/: account.rs  chain_id.rs  error.rs  event.rs  lib.rs  name.rs
namespaces/src/method/: eip.rs  mod.rs  solana.rs
relay/: Cargo.toml
relay/src/: client.rs  error.rs  lib.rs  mock.rs  mock_server.rs
relay/src/mock/: client.rs  factory.rs  mocker.rs  mod.rs  server.rs
relay/tests/: local.rs
sessions/: Cargo.toml  README.md
sessions/examples/dapp/: app.rs  config.rs  event_reader.rs  input.rs  log.rs  main.rs  runner.rs
sessions/examples/dapp/msg/: mod.rs
sessions/examples/dapp/msg/in_/: external.rs  internal.rs  mod.rs
sessions/examples/dapp/ui/: layout.rs  mod.rs
sessions/src/: crypto.rs  error.rs  handlers.rs  lib.rs  pairing_uri.rs  rpc.rs  wait.rs
sessions/src/actors/: cipher.rs  inbound.rs  mod.rs  pair_manager_requests.rs  proposal.rs  request.rs  session.rs  session_handlers.rs  socket.rs  transport.rs
sessions/src/crypto/: cipher.rs  error.rs  payload.rs  session.rs
sessions/src/dapp/: mod.rs  session_settle.rs
sessions/src/domain/: mod.rs
sessions/src/handlers/: mod.rs
sessions/src/pair/: builder.rs  handlers.rs  mod.rs  registration.rs  settlement.rs  socket_handler.rs  socket_handler_wasm.rs
sessions/src/relay/: error.rs  mock.rs  mod.rs  relay_handler.rs
sessions/src/rpc/: params.rs  sdkerrors.rs
sessions/src/rpc/params/: pair_delete.rs  pair_extend.rs  pair_ping.rs  session_delete.rs  session_event.rs  session_extend.rs  session_ping.rs  session_propose.rs  session_request.rs  session_settle.rs  session_update.rs  shared_types.rs
sessions/src/rpc/params/shared_types/: propose_namespaces.rs  settle_namespaces.rs
sessions/src/session/: mod.rs  pending.rs  relay_handler.rs  session_delete.rs  session_ping.rs  session_request.rs
sessions/src/storage/: mod.rs  os.rs
sessions/src/transport/: mod.rs
sessions/src/wallet/: mod.rs  settlement.rs
sessions/tests/: dapp.rs  manager.rs  test_utils.rs
solana/: Cargo.toml
solana-dapp/: Cargo.toml
solana-dapp/src/: account.rs  app.rs  config.rs  event.rs  handler.rs  main.rs  message.rs  pair.rs  pubsub.rs  runner.rs  session_poll.rs  tui.rs
solana-dapp/src/state/: mod.rs
solana-dapp/src/ui/: components.rs  mod.rs  model.rs  models.rs  popups.rs  termination.rs
solana-dapp/src/ui/components/: history.rs  nav.rs  popups.rs
solana-dapp/src/workers/: dapp.rs  mod.rs  render.rs  tick.rs  user_input.rs
solana/session/: Cargo.toml
solana/session/src/: error.rs  lib.rs  signer.rs
solana/session/tests/: mock_wallet.rs  solana.rs
solana/signer/: Cargo.toml
solana/signer/src/: error.rs  lib.rs  mock.rs  rpc.rs  signer.rs
solana/signer/tests/: mock_wallet.rs  solana_signer.rs
solana/src/: compute_budget.rs  error.rs  fee.rs  lib.rs  memo.rs  signer.rs  stake.rs  wallet.rs
solana/src/stake/: account.rs  client.rs  delegate.rs  withdrawal.rs
solana/src/token/: account_client.rs  client.rs  metadata.rs  mint.rs  mod.rs
solana/tests/: solana-key.json  solana.rs
solana/wallet/: Cargo.toml  tokens.json
solana/wallet.bak/: Cargo.toml
solana/wallet.bak/src/: error.rs  stake.rs
solana/wallet.bak/src/stake/: client.rs  delegate.rs
solana/wallet/ignored-tests/: solana.rs
solana/wallet/src/: compute_budget.rs  error.rs  fee.rs  lib.rs  reown.rs  signer.rs  wallet.rs
solana/wallet/src/reown/: account.rs  info.rs  signer.rs
solana/wallet/src/stake/: account.rs  withdrawal.rs
solana/wallet/src/token/: mod.rs  symbol.rs
solana/wallet/src/wallet/: account.rs  info.rs  memo.rs  transaction.rs
solana/wallet/tests/: instructions.rs  setup.rs  wallet.rs
store/: Cargo.toml
store/src/: lib.rs  native.rs  wasm.rs
store/tests/: browser.rs  wasm.rs
