[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Doug Chimento <dchimento@gmail.com>"]
repository = "https://github.com/dougEfish/walletconnect-signer"
license = "MIT"

[workspace]
resolver = "2"
members = [ "cli",
    "namespaces", "relay",
    "sessions", "solana",
    "cli"
]
#unused_variables = "warn"
#unused_imports = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_variables = "allow"
unused_imports = "allow"
dead_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic =  { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
#dead_code = "allow"

[workspace.dependencies]
aead = { version = "0.5.2" }
alloy-chains = {version = "0.1", features = ["serde"]}
bs58 = "0.4.0"
bincode = { version = "1.3"}
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"]}
config  = { version = "0.14" }
console-subscriber = { version = "0.4" }
copypasta = { version = "0.10" }
crossbeam = "0.8.4"
clap = { version = "4.5.4", features = ["wrap_help", "derive", "cargo", "env"] }
ctrlc = { version = "3.4.3", features = ["termination"] }
dashmap = {version = "5", features = ["serde"]}
data-encoding = { version = "2"}
derive_more = {version = "1", features = ["full"]}
dirs = { version = "5"}
dotenvy = {version = "0.15"}
enum-str-derive = { version = "0.1" }
futures = { version = "0.3"}
futures-util = { version = "0.3" }
hkdf = "0.12"
lazy_static = "1.4"
microxdg = { version = "0.1"}
once_cell = "1.16"
paste = "1.0"
pin-project-lite = {version = "0.2.14" }
rand = "0.8"
regex = "1.10"
reqwest = {version = "0.11", features = ["serde_json"]}
sha2 = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3" }
strum = { version = "0.26"}
strum_macros = { version = "0.26" }

spl-associated-token-account-client = { version = "1.0.0" }
spl-associated-token-account = {  version = "5.0.1"  }
spl-memo = { version = "5" }
spl-token = { version = "6.0.0" }
spl-token-client = { version = "0.12.1"}
spl-token-2022 = {version = "5.0.2" }
solana-account-decoder = { version = "2.0.13" }
solana-client ={ version = "2.0.13" }
solana-feature-set ={ version = "0.0.1" }
solana-program = { version = "2.0.13"}
solana-rpc-client ={ version = "2.0.13" }
solana-rpc-client-api = { version = "2.0.13" }
solana-sdk = { version = "2.0.13" }
stanza = { version = "0.5" }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
trait-variant = "0.1.2"
#tuirealm = { version = "1.9" }
# tui-realm-stdlib = { version = "1.3" }
#tui-logger = { version = "0.12" , features = ["crossterm", "tracing-support"]}
#tui-widgets = { version = "0.3" }
url = "2.4"
xtra = { version = "0.6.0", features = ["macros", "tokio"]}

#crossterm = { version = "0.28.1", features = ["event-stream"] }
#ratatui = { version = "0.28" }

[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
#aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }



