[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Doug Chimento <dchimento@gmail.com>"]
repository = "https://github.com/dougEfish/"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "cipher",
    "domain",
    # "examples/dapp-demo",
    # "examples/web-demo",
    # "examples/dioxus-demo",
    #"extension",
    "namespaces",
    "relay",
    "sessions",
    "store",
]


[workspace.lints.rust]
unsafe_code = "forbid"
unused_variables = "warn"
unused_imports = "warn"
dead_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic =  { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
#dead_code = "allow"

[workspace.dependencies]
aead = { version = "0.5.2" }
alloy-chains = {version = "0.1", features = ["serde"]}
async-trait = { version = "0.1"}
bincode = { version = "1.3"}
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
    "wasmbind",
    "wasm-bindgen"
] }
config  = { version = "0.15" }
console-subscriber = { version = "0.4" }
copypasta = { version = "0.10" }
crossbeam = "0.8.4"
clap = { version = "4.5.4", features = ["wrap_help", "derive", "cargo", "env"] }
ctrlc = { version = "3.4.3", features = ["termination"] }
dashmap = {version = "5", features = ["serde"]}
data-encoding = { version = "2"}
derive_more = {version = "1", features = ["full"]}
dirs = { version = "5"}
dotenvy = {version = "0.15"}
enum-str-derive = { version = "0.1" }
fast_qr = { version = "0.12" }
futures = { version = "0.3"}
futures-util = { version = "0.3" }
hex = { version = "0.4" }
hkdf = "0.12"
lazy_static = "1.4"
microxdg = { version = "0.2"}
once_cell = "1.16"
paste = "1.0"
pin-project-lite = {version = "0.2.14" }
rand = "0.8"
reown-relay-client = { version = "0.1.0"}
reown-relay-rpc = { version = "0.1.0"}
regex = "1.10"
reqwest = {version = "0.12", features = ["json"]}
sha2 = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3" }
strum = { version = "0.26"}
strum_macros = { version = "0.26" }
thiserror =  { version = "2" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
trait-variant = "0.1.2"
url = "2.4"

## wasm
console_error_panic_hook = "0.1"
gloo-storage = { version = "0.3" }
gloo-timers = { version = "0.3", features = ["futures"] }
web-time = { version = "1.1.0", features = ["serde"] }
wasm-tracing = { version = "1", features = ["tracing-log"] }
wasm-bindgen-futures = { version = "0.4" }
wallet_standard_browser =  { version = "0.4", features = ["solana"] }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
## TUI
#tuirealm = { version = "1.9" }
# tui-realm-stdlib = { version = "1.3" }
#tui-logger = { version = "0.12" , features = ["crossterm", "tracing-support"]}
#tui-widgets = { version = "0.3" }
#crossterm = { version = "0.28.1", features = ["event-stream"] }
#ratatui = { version = "0.28" }
