[package]
name = "monedero-cipher"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
chacha20poly1305 = { workspace =  true }
chrono = { workspace = true }
dashmap = { workspace = true }
data-encoding = { workspace = true }
derive_more = { workspace = true }
hkdf = { workspace = true }
monedero-relay = { path = "../relay" }
monedero-store = { path = "../store" }
monedero-domain = { path = "../domain" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
xtra =  { workspace = true }

[dev-dependencies]
anyhow = "1"
hex = "0.4"
hex-literal = "0.4"
tokio = "1"
tracing-error = { version = "0.2.0"}
dotenvy = {version = "0.15"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[lints]
workspace = true
