[package]
name = "monedero-mesh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = {version = "1" }
config = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
console = { version = "0.15" }
dialoguer = { version = "0.11", default-features = false, features = ["history", "fuzzy-matcher", "fuzzy-select"]}
futures = { workspace = true }
kvx = { version = "0.9" }
microxdg = { workspace = true }
monedero-solana = { path = "../solana" }
monedero-namespaces = { path = "../namespaces" }
solana-rpc-client = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
serde = { version = "1", features = ["derive"] }
copypasta = { version = "0.10" }
console-subscriber = { version = "0.4" }

[lints]
workspace = true
