[package]
name = "monedero-mesh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "monedero-mesh"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1" }
config = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
console-subscriber = { version = "0.4" }
copypasta = { version = "0.10" }
dirs = { workspace = true }
dotenvy = { workspace = true }
console = { version = "0.15" }
enum-str-derive = { workspace = true }
futures = { workspace = true }
kvx = { version = "0.9" }
microxdg = { workspace = true }
monedero-solana = { path = "../solana" }
monedero-namespaces = { path = "../namespaces" }
promkit = { version = "0.5"  }
serde = { version = "1", features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
solana-rpc-client = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
