[package]
name = "walletconnect-namespaces"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
alloy-chains = {workspace = true}
serde = {workspace = true}
serde_with = { workspace = true }
thiserror = { workspace = true}
tracing = { workspace = true}

[dev-dependencies]
anyhow = "1"
serde_json = "1"
