[package]
name = "monedero-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
mock = [
    "once_cell",
    "dashmap"
]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
    "wasmbind"
] }
dashmap = { version = "5", optional = true}
once_cell = { version = "1", optional = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { version = "0.1" }
walletconnect_sdk = { git = "https://github.com/dougEfresh/WalletConnectRust.git", branch = "wasm" , features = ["rpc", "client"] }

[dev-dependencies]
tokio = { version = "1" , features = ["full"] }
anyhow = "1"
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0"}
dotenvy = {version = "0.15"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[[test]]
name = "local"

