[package]
name = "monedero-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
chrono = { workspace = true }
dashmap = { version = "5" }
once_cell = { version = "1", optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walletconnect_sdk = { git = "https://github.com/dougEfresh/WalletConnectRust.git", branch = "wasm" , features = ["rpc", "client"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true , features = ["full"]}
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.24" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }


[dev-dependencies]
tokio = { version = "1" , features = ["full"] }
anyhow = "1"
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0"}
dotenvy = {version = "0.15"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
