[package]
name = "monedero-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
aead = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
data-encoding = { workspace = true }
derive_more = { workspace = true }
hkdf = { workspace = true }
lazy_static = { workspace = true }
monedero-domain = { path = "../domain", version = "0.1.0" }
monedero-cipher = { path = "../cipher" , version = "0.1.0"}
monedero-store = { path = "../store" , version = "0.1.0"}
monedero-relay = { path = "../relay", version = "0.1.0" }
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = {workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
url = { workspace = true }
dashmap = {  workspace = true }
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backoff = {version = "0.4", features = ["tokio"]}
kvx = { version = "0.9" }
xtra = { version = "0.6", features = ["macros", "tokio", "instrumentation"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
backoff = { version = "0.4", features = ["wasm-bindgen", "futures"] }
futures-util = { workspace = true }
getrandom = { version = "0.3" , features = ["js"]}
gloo-timers = { workspace = true }
# wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = {  workspace = true }
#web-sys = { version = "0.3" }
xtra = { version = "0.6", features = ["macros", "wasm_bindgen", "instrumentation" ] }

[[test]]
name = "manager"

[[test]]
name = "dapp"

#[[test]]
#name = "wasm"
#required-features = ["mock"]

[dev-dependencies]
alloy-chains = {workspace = true}
assert_matches = { version = "1" }
hex-literal = { version = "0.4" }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1"
env_logger = { version = "0.11" }
tracing-error = { version = "0.2"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
