[package]
name = "monedero-solana-dapp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = {version = "1" }
config = { workspace = true }
crossbeam = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
crossterm = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
microxdg = { workspace = true }
monedero-solana = { path = "../solana" }
monedero-namespaces = { path = "../namespaces" }
ratatui = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tuirealm = { workspace = true }
tui-logger = { workspace = true }
tui-realm-stdlib = { workspace = true }
tui-widgets = { workspace = true }
dotenvy = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
