[package]
name = "dapp-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "dapp-demo"
path = "src/main.rs"

[dependencies]
alloy-chains = { workspace = true }
anyhow = "1"
copypasta = { workspace = true }
console_error_panic_hook = { workspace = true }
fast_qr = { version = "0.12" }
futures = { workspace = true }
gloo-timers = { workspace = true }
monedero-mesh = { path = "../../sessions" }
rand = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = {  workspace = true }
# tokio = { version = "1", features = ["full"] }

[lints]
workspace = true

