[package]
name = "web-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = { version = "0.1" }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
monedero-mesh = { path = "../../sessions" }
rand = { workspace = true }
tracing-wasm = { version = "0.2" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-time = { version = "1", features = ["serde"] }
web-sys = { version = "0.3", features = [
    "Element", "HtmlElement", "Window",
    "WebSocket", "console", "Event",
    "Document", "Crypto", "CryptoKey",
    "DateTimeValue", "SubtleCrypto", "Performance",
    "TimeEvent"
] }

[lints]
workspace = true


[package.metadata.wasm-pack.profile.dev]
wasm-bindgen = { debug-js-glue = true, demangle-name-section = true }
wasm-opt = false

