[package]
name = "web-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-chains = { workspace = true }
anyhow = "1"
console_error_panic_hook = { workspace = true }
fast_qr = { version = "0.12" }
futures = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { workspace = true }
monedero-mesh = { path = "../../sessions" }
monedero-solana = { path = "../../solana/wallet" }
rand = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-time = { workspace = true }
wasm-tracing = { workspace = true }
wallet_standard_browser = { version = "0.4", features = ["solana"] }
memory_wallet = { version = "0.1"}

[dependencies.web-sys]
version = "0.3"
features = [
    "Element", "HtmlElement", "Window",
    "WebSocket", "console", "Event",
    "Document", "Crypto", "CryptoKey",
    "DateTimeValue", "SubtleCrypto", "Performance", 
    "TimeEvent"
]

[lints]
workspace = true


[package.metadata.wasm-pack.profile.dev]
wasm-bindgen = { debug-js-glue = true, demangle-name-section = true }
wasm-opt = false

