[package]
name = "monedero-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["relay"]
relay = ["monedero-relay", "monedero-mesh"] # with default features
mock = [
    "monedero-mesh/mock",
    "monedero-relay/mock"
]

[dependencies]
anyhow = "1"
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
monedero-mesh = { path = "../../sessions", optional = true}
monedero-domain = { path = "../../domain"}
monedero-store = { path = "../../store"}
monedero-relay = { path = "../../relay", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }

#spl-memo = { workspace = true }
#spl-token = { workspace = true }
#spl-token-client ={ workspace = true }
#spl-token-2022 = { workspace = true }
#spl-associated-token-account-client = { workspace = true }
#spl-associated-token-account = { workspace = true }
#solana-account-decoder =  { workspace = true }
#solana-client = { workspace = true }
#solana-feature-set = { workspace = true }
#solana-program = { workspace = true }
#solana-rpc-client = { workspace = true }
#solana-rpc-client-api = { workspace = true }
#solana-sdk = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
microxdg = { workspace = true }


[dev-dependencies]
alloy = { version = "0.6", features = ["full"] }
assert_matches = { version = "1.5.0" }
async-trait = "0.1.82"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.9.3" }
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0"}
dotenvy = {version = "0.15"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[[test]]
name = "solana"
required-features = ["mock"]
