[package]
name = "monedero-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
anyhow = "1"
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
monedero-mesh = { path = "../../sessions" }
monedero-domain = { path = "../../domain" }
monedero-store = { path = "../../store" }
monedero-relay = { path = "../../relay" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
microxdg = { workspace = true }


[dev-dependencies]
assert_matches = { version = "1.5.0" }
async-trait = "0.1.82"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0"}
dotenvy = {version = "0.15"}
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
solana-keypair = { version = "0.0.2" }
solana-rpc-client = { workspace = true }

[[test]]
name = "solana"
required-features = ["mock"]
